[package]
name = "search"
version = "0.1.0"
authors = ["Matt Joiner <anacrolix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = "0.42.0"
rusoto_core = "0.42.0"
rusoto_sqs = "0.42.0"
rusoto_sns = "0.42.0"

uuid = { version = "0.8.1", features = ["v4"] }
# bytesize = "1.0.0"
# failure = "0.1.6"
# aws_lambda_events = "^0.2.5"
serde_json = "1.0"
human-size = "0.4.0"
# rocket = "0.4.2"
scopeguard = "1.0.0"
# TODO: Why is this catching Ctrl+\ (should be SIGQUIT?) on MacOS.
ctrlc = {version = "3.1.3", features = ["termination"]}
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
actix-web = "1.0"
# hyper = "0.12"
url = "2.1.0"
mime_guess = "2.0.1"
mime = "0.3.16"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.26"