[package]
name = "search"
version = "0.1.0"
authors = ["Matt Joiner <anacrolix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = { git = "https://github.com/dbcfd/rusoto", branch = "tokio2" }
rusoto_core = { git = "https://github.com/dbcfd/rusoto", branch = "tokio2" }
rusoto_sqs = { git = "https://github.com/dbcfd/rusoto", branch = "tokio2" }
rusoto_sns = { git = "https://github.com/dbcfd/rusoto", branch = "tokio2" }

uuid = { version = "0.8.1", features = ["v4"] }
# aws_lambda_events = "^0.2.5"
serde_json = "1.0"
human-size = "0.4.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
warp = "0.2.0"
url = "2.1.0"
mime_guess = "2.0.1"
mime = "0.3.16"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.26"
futures = "0.3.1"
futures-util = "0.3.1"
